#1 add some texts

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -54,6 +54,7 @@
   		gtag('config', 'G-QR4L9E1Q8Y');
 	</script>
 	
+	<!-- Canonical tag -->
 	<link rel="canonical" href="http://koomiy.github.io/">
 </head>
 
