--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,6 @@
 <footer class="footer">
 	{{ partial "add-mathjax-to-page.html" . }}
+	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css" />
 	<div class="container footer__container flex">
 		{{ partial "footer_links.html" . }}
 		<div class="footer__copyright">
