--- a/layouts/partials/add-mathjax-to-page.html
+++ b/layouts/partials/add-mathjax-to-page.html
@@ -7,5 +7,5 @@
  });
 </script>
 
-<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+<script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 </script>
